# autoideas

./: .env.example  .env.worker  .gitignore  ARCHITECTURE.md  CLAUDE.md  EEStyle.md  README.md  docker-compose-worker.yml  docker-compose.yml  spec.md  test_queue.py
apache/: apps.equalexperts.ai-le-ssl.conf
api/: Dockerfile  pyproject.toml
api/src/: main.py
configs/workshops/caresuper/: metadata.json
configs/workshops/caresuper/elevenlabs/: agent_config.json  questions.json  system_prompt.txt
configs/workshops/caresuper/miro/: board_template.json  card_template.json
db/init/: 001_survey_schema.sql
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: styles.css
frontend/js/: app.js  voice-agent.js
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/: __init__.py  config.py  handlers.py  server.py
redis/: redis.conf
survey/: elevenlabs-agent-prompt.md  elevenlabs-tool-config.md  surveyscript.txt
survey-admin/: Dockerfile  index.html  nginx.conf
survey-admin/css/: styles.css
survey-admin/js/: app.js
survey-form/: Dockerfile  index.html
survey-form/css/: styles.css
survey-form/js/: app.js
survey-frontend/: Dockerfile  index.html  nginx.conf
survey-frontend/css/: styles.css
survey-worker/: Dockerfile  pyproject.toml
survey-worker/src/: survey_processor.py  worker.py
workers/: Dockerfile  pyproject.toml
workers/src/: __init__.py  ai_processor.py  miro_client.py  processor.py  triage_agent.py  worker.py
