[project]
name = "autoideas-workers"
version = "0.1.0"
description = "Background workers for AutoIdeas idea processing"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "rq>=1.16.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]